# flask

./: Dockerfile  Procfile  config.py  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
blog/: app.py  config.py
blog/admin/: admin.py
blog/api/: __init__.py  article.py  tag.py  user.py
blog/articles/: views.py
blog/auth/: views.py
blog/forms/: __init__.py  article.py  user.py
blog/models/: __init__.py  database.py  models.py
blog/permissions/: user.py
blog/shemas/: __init__.py  shemas.py
blog/templates/: base.html  navbar.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html  register.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: details.html  list.html
blog/user/: views.py
flask_project/: app.py
instance/: db.sqlite
migrations/versions/: 3972be006dc6_create_database.py  69be4658c45b_create_relationship.py  e7c957620a60_add_field_age_in_user_table.py  eb54bb14fe78_add_first_name_last_name_in_user_table_.py
