[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["solovyova-1996 <shatdar@yandex.ru>"]
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "^3.10"
dotenv = "^0.0.5"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^3.0.3"
python-dotenv = "^1.0.0"
Flask-Admin = "^1.6.1"
apispec = "^6.3.0"
Flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
